// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Transaction table Match snapshot (isTableHistory = false) 1`] = `
<div>
  <form
    class="chakra-stack css-1cfckle"
    data-testid="search-bar"
  >
    <div
      class="css-9d69w6"
    >
      <div
        class="chakra-form-control css-0"
        role="group"
      >
        <div
          class="chakra-input__group css-169ufh8"
          data-group="true"
        >
          <div
            class="chakra-input__left-element css-1u2k0bl"
          >
            <svg
              fill="none"
              height="20"
              stroke="#1D1E24"
              viewBox="0 0 20 20"
              width="20"
              xmlns="http://www.w3.org/2000/svg"
            >
              <circle
                cx="9.78639"
                cy="9.78602"
                r="8.23951"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="1.5"
              />
              <path
                d="M15.5176 15.9447L18.7479 19.1667"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="1.5"
              />
            </svg>
          </div>
          <input
            class="chakra-input css-6hxpcw"
            data-testid="search-transaction"
            id="field-:r0:"
            placeholder="Search by name, email, or other..."
            type="text"
            value=""
          />
        </div>
      </div>
    </div>
    <div
      class="css-cgqc68"
    >
      <button
        aria-controls="menu-list-:r2:"
        aria-expanded="false"
        aria-haspopup="menu"
        class="chakra-button chakra-menu__menu-button css-lyu4i6"
        id="menu-button-:r2:"
        type="button"
      >
        <span
          class="css-xl71ch"
        >
          <span
            class="css-14zmob5"
          >
            <svg
              fill="none"
              height="17"
              stroke="#1D1E24"
              width="18"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M7.552 13.502H1.25M10.362 3.81h6.301"
              />
              <path
                clip-rule="evenodd"
                d="M5.948 3.756a2.355 2.355 0 0 0-2.363-2.347 2.355 2.355 0 0 0-2.363 2.347 2.355 2.355 0 0 0 2.363 2.346 2.355 2.355 0 0 0 2.363-2.346ZM17.221 13.463a2.354 2.354 0 0 0-2.362-2.346 2.355 2.355 0 0 0-2.364 2.346 2.355 2.355 0 0 0 2.364 2.347 2.354 2.354 0 0 0 2.362-2.347Z"
              />
            </svg>
            Filters
          </span>
        </span>
      </button>
      <div
        class="css-0"
        style="visibility: hidden; position: absolute; inset: 0 auto auto 0;"
      >
        <div
          aria-orientation="vertical"
          class="chakra-menu__menu-list css-ta0hp9"
          id="menu-list-:r2:"
          role="menu"
          style="transform-origin: var(--popper-transform-origin); opacity: 0; visibility: hidden; transform: scale(0.8) translateZ(0);"
          tabindex="-1"
        >
          <button
            class="chakra-menu__menuitem css-1oz22gy"
            data-index="0"
            id="menu-list-:r2:-menuitem-:r3:"
            role="menuitem"
            tabindex="-1"
            type="button"
          >
            <p
              class="chakra-text css-1198d6z"
            >
              January
            </p>
          </button>
          <button
            class="chakra-menu__menuitem css-1oz22gy"
            data-index="1"
            id="menu-list-:r2:-menuitem-:r4:"
            role="menuitem"
            tabindex="-1"
            type="button"
          >
            <p
              class="chakra-text css-1198d6z"
            >
              February
            </p>
          </button>
          <button
            class="chakra-menu__menuitem css-1oz22gy"
            data-index="2"
            id="menu-list-:r2:-menuitem-:r5:"
            role="menuitem"
            tabindex="-1"
            type="button"
          >
            <p
              class="chakra-text css-1198d6z"
            >
              March
            </p>
          </button>
          <button
            class="chakra-menu__menuitem css-1oz22gy"
            data-index="3"
            id="menu-list-:r2:-menuitem-:r6:"
            role="menuitem"
            tabindex="-1"
            type="button"
          >
            <p
              class="chakra-text css-1198d6z"
            >
              April
            </p>
          </button>
          <button
            class="chakra-menu__menuitem css-1oz22gy"
            data-index="4"
            id="menu-list-:r2:-menuitem-:r7:"
            role="menuitem"
            tabindex="-1"
            type="button"
          >
            <p
              class="chakra-text css-1198d6z"
            >
              May
            </p>
          </button>
          <button
            class="chakra-menu__menuitem css-1oz22gy"
            data-index="5"
            id="menu-list-:r2:-menuitem-:r8:"
            role="menuitem"
            tabindex="-1"
            type="button"
          >
            <p
              class="chakra-text css-1198d6z"
            >
              June
            </p>
          </button>
          <button
            class="chakra-menu__menuitem css-1oz22gy"
            data-index="6"
            id="menu-list-:r2:-menuitem-:r9:"
            role="menuitem"
            tabindex="-1"
            type="button"
          >
            <p
              class="chakra-text css-1198d6z"
            >
              July
            </p>
          </button>
          <button
            class="chakra-menu__menuitem css-1oz22gy"
            data-index="7"
            id="menu-list-:r2:-menuitem-:ra:"
            role="menuitem"
            tabindex="-1"
            type="button"
          >
            <p
              class="chakra-text css-1198d6z"
            >
              August
            </p>
          </button>
          <button
            class="chakra-menu__menuitem css-1oz22gy"
            data-index="8"
            id="menu-list-:r2:-menuitem-:rb:"
            role="menuitem"
            tabindex="-1"
            type="button"
          >
            <p
              class="chakra-text css-1198d6z"
            >
              September
            </p>
          </button>
          <button
            class="chakra-menu__menuitem css-1oz22gy"
            data-index="9"
            id="menu-list-:r2:-menuitem-:rc:"
            role="menuitem"
            tabindex="-1"
            type="button"
          >
            <p
              class="chakra-text css-1198d6z"
            >
              October
            </p>
          </button>
          <button
            class="chakra-menu__menuitem css-1oz22gy"
            data-index="10"
            id="menu-list-:r2:-menuitem-:rd:"
            role="menuitem"
            tabindex="-1"
            type="button"
          >
            <p
              class="chakra-text css-1198d6z"
            >
              November
            </p>
          </button>
          <button
            class="chakra-menu__menuitem css-1oz22gy"
            data-index="11"
            id="menu-list-:r2:-menuitem-:re:"
            role="menuitem"
            tabindex="-1"
            type="button"
          >
            <p
              class="chakra-text css-1198d6z"
            >
              December
            </p>
          </button>
        </div>
      </div>
    </div>
  </form>
  <div
    class="chakra-skeleton css-1dl4gcj"
  />
  <div
    class="chakra-skeleton css-1dl4gcj"
  />
  <div
    class="chakra-skeleton css-1dl4gcj"
  />
  <div
    class="chakra-skeleton css-1dl4gcj"
  />
  <div
    class="chakra-skeleton css-1dl4gcj"
  />
</div>
`;

exports[`Transaction table Render with empty data 1`] = `
<div>
  <form
    class="chakra-stack css-1cfckle"
    data-testid="search-bar"
  >
    <div
      class="css-9d69w6"
    >
      <div
        class="chakra-form-control css-0"
        role="group"
      >
        <div
          class="chakra-input__group css-169ufh8"
          data-group="true"
        >
          <div
            class="chakra-input__left-element css-1u2k0bl"
          >
            <svg
              fill="none"
              height="20"
              stroke="#1D1E24"
              viewBox="0 0 20 20"
              width="20"
              xmlns="http://www.w3.org/2000/svg"
            >
              <circle
                cx="9.78639"
                cy="9.78602"
                r="8.23951"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="1.5"
              />
              <path
                d="M15.5176 15.9447L18.7479 19.1667"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="1.5"
              />
            </svg>
          </div>
          <input
            class="chakra-input css-6hxpcw"
            data-testid="search-transaction"
            id="field-:r1i:"
            placeholder="Search by name, email, or other..."
            type="text"
            value=""
          />
        </div>
      </div>
    </div>
    <div
      class="css-cgqc68"
    >
      <button
        aria-controls="menu-list-:r1k:"
        aria-expanded="false"
        aria-haspopup="menu"
        class="chakra-button chakra-menu__menu-button css-lyu4i6"
        id="menu-button-:r1k:"
        type="button"
      >
        <span
          class="css-xl71ch"
        >
          <span
            class="css-14zmob5"
          >
            <svg
              fill="none"
              height="17"
              stroke="#1D1E24"
              width="18"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M7.552 13.502H1.25M10.362 3.81h6.301"
              />
              <path
                clip-rule="evenodd"
                d="M5.948 3.756a2.355 2.355 0 0 0-2.363-2.347 2.355 2.355 0 0 0-2.363 2.347 2.355 2.355 0 0 0 2.363 2.346 2.355 2.355 0 0 0 2.363-2.346ZM17.221 13.463a2.354 2.354 0 0 0-2.362-2.346 2.355 2.355 0 0 0-2.364 2.346 2.355 2.355 0 0 0 2.364 2.347 2.354 2.354 0 0 0 2.362-2.347Z"
              />
            </svg>
            Filters
          </span>
        </span>
      </button>
      <div
        class="css-0"
        style="visibility: hidden; position: absolute; inset: 0 auto auto 0;"
      >
        <div
          aria-orientation="vertical"
          class="chakra-menu__menu-list css-ta0hp9"
          id="menu-list-:r1k:"
          role="menu"
          style="transform-origin: var(--popper-transform-origin); opacity: 0; visibility: hidden; transform: scale(0.8) translateZ(0);"
          tabindex="-1"
        >
          <button
            class="chakra-menu__menuitem css-1oz22gy"
            data-index="0"
            id="menu-list-:r1k:-menuitem-:r1l:"
            role="menuitem"
            tabindex="-1"
            type="button"
          >
            <p
              class="chakra-text css-1198d6z"
            >
              January
            </p>
          </button>
          <button
            class="chakra-menu__menuitem css-1oz22gy"
            data-index="1"
            id="menu-list-:r1k:-menuitem-:r1m:"
            role="menuitem"
            tabindex="-1"
            type="button"
          >
            <p
              class="chakra-text css-1198d6z"
            >
              February
            </p>
          </button>
          <button
            class="chakra-menu__menuitem css-1oz22gy"
            data-index="2"
            id="menu-list-:r1k:-menuitem-:r1n:"
            role="menuitem"
            tabindex="-1"
            type="button"
          >
            <p
              class="chakra-text css-1198d6z"
            >
              March
            </p>
          </button>
          <button
            class="chakra-menu__menuitem css-1oz22gy"
            data-index="3"
            id="menu-list-:r1k:-menuitem-:r1o:"
            role="menuitem"
            tabindex="-1"
            type="button"
          >
            <p
              class="chakra-text css-1198d6z"
            >
              April
            </p>
          </button>
          <button
            class="chakra-menu__menuitem css-1oz22gy"
            data-index="4"
            id="menu-list-:r1k:-menuitem-:r1p:"
            role="menuitem"
            tabindex="-1"
            type="button"
          >
            <p
              class="chakra-text css-1198d6z"
            >
              May
            </p>
          </button>
          <button
            class="chakra-menu__menuitem css-1oz22gy"
            data-index="5"
            id="menu-list-:r1k:-menuitem-:r1q:"
            role="menuitem"
            tabindex="-1"
            type="button"
          >
            <p
              class="chakra-text css-1198d6z"
            >
              June
            </p>
          </button>
          <button
            class="chakra-menu__menuitem css-1oz22gy"
            data-index="6"
            id="menu-list-:r1k:-menuitem-:r1r:"
            role="menuitem"
            tabindex="-1"
            type="button"
          >
            <p
              class="chakra-text css-1198d6z"
            >
              July
            </p>
          </button>
          <button
            class="chakra-menu__menuitem css-1oz22gy"
            data-index="7"
            id="menu-list-:r1k:-menuitem-:r1s:"
            role="menuitem"
            tabindex="-1"
            type="button"
          >
            <p
              class="chakra-text css-1198d6z"
            >
              August
            </p>
          </button>
          <button
            class="chakra-menu__menuitem css-1oz22gy"
            data-index="8"
            id="menu-list-:r1k:-menuitem-:r1t:"
            role="menuitem"
            tabindex="-1"
            type="button"
          >
            <p
              class="chakra-text css-1198d6z"
            >
              September
            </p>
          </button>
          <button
            class="chakra-menu__menuitem css-1oz22gy"
            data-index="9"
            id="menu-list-:r1k:-menuitem-:r1u:"
            role="menuitem"
            tabindex="-1"
            type="button"
          >
            <p
              class="chakra-text css-1198d6z"
            >
              October
            </p>
          </button>
          <button
            class="chakra-menu__menuitem css-1oz22gy"
            data-index="10"
            id="menu-list-:r1k:-menuitem-:r1v:"
            role="menuitem"
            tabindex="-1"
            type="button"
          >
            <p
              class="chakra-text css-1198d6z"
            >
              November
            </p>
          </button>
          <button
            class="chakra-menu__menuitem css-1oz22gy"
            data-index="11"
            id="menu-list-:r1k:-menuitem-:r20:"
            role="menuitem"
            tabindex="-1"
            type="button"
          >
            <p
              class="chakra-text css-1198d6z"
            >
              December
            </p>
          </button>
        </div>
      </div>
    </div>
  </form>
  <div
    class="chakra-skeleton css-1dl4gcj"
  />
  <div
    class="chakra-skeleton css-1dl4gcj"
  />
  <div
    class="chakra-skeleton css-1dl4gcj"
  />
  <div
    class="chakra-skeleton css-1dl4gcj"
  />
  <div
    class="chakra-skeleton css-1dl4gcj"
  />
</div>
`;

exports[`Transaction table Render with empty data 2`] = `
<div>
  <form
    class="chakra-stack css-1cfckle"
    data-testid="search-bar"
  >
    <div
      class="css-9d69w6"
    >
      <div
        class="chakra-form-control css-0"
        role="group"
      >
        <div
          class="chakra-input__group css-169ufh8"
          data-group="true"
        >
          <div
            class="chakra-input__left-element css-1u2k0bl"
          >
            <svg
              fill="none"
              height="20"
              stroke="#1D1E24"
              viewBox="0 0 20 20"
              width="20"
              xmlns="http://www.w3.org/2000/svg"
            >
              <circle
                cx="9.78639"
                cy="9.78602"
                r="8.23951"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="1.5"
              />
              <path
                d="M15.5176 15.9447L18.7479 19.1667"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="1.5"
              />
            </svg>
          </div>
          <input
            class="chakra-input css-6hxpcw"
            data-testid="search-transaction"
            id="field-:r1i:"
            placeholder="Search by name, email, or other..."
            type="text"
            value=""
          />
        </div>
      </div>
    </div>
    <div
      class="css-cgqc68"
    >
      <button
        aria-controls="menu-list-:r1k:"
        aria-expanded="false"
        aria-haspopup="menu"
        class="chakra-button chakra-menu__menu-button css-lyu4i6"
        id="menu-button-:r1k:"
        type="button"
      >
        <span
          class="css-xl71ch"
        >
          <span
            class="css-14zmob5"
          >
            <svg
              fill="none"
              height="17"
              stroke="#1D1E24"
              width="18"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M7.552 13.502H1.25M10.362 3.81h6.301"
              />
              <path
                clip-rule="evenodd"
                d="M5.948 3.756a2.355 2.355 0 0 0-2.363-2.347 2.355 2.355 0 0 0-2.363 2.347 2.355 2.355 0 0 0 2.363 2.346 2.355 2.355 0 0 0 2.363-2.346ZM17.221 13.463a2.354 2.354 0 0 0-2.362-2.346 2.355 2.355 0 0 0-2.364 2.346 2.355 2.355 0 0 0 2.364 2.347 2.354 2.354 0 0 0 2.362-2.347Z"
              />
            </svg>
            Filters
          </span>
        </span>
      </button>
      <div
        class="css-0"
        style="visibility: hidden; position: absolute; inset: 0 auto auto 0;"
      >
        <div
          aria-orientation="vertical"
          class="chakra-menu__menu-list css-ta0hp9"
          id="menu-list-:r1k:"
          role="menu"
          style="transform-origin: var(--popper-transform-origin); opacity: 0; visibility: hidden; transform: scale(0.8) translateZ(0);"
          tabindex="-1"
        >
          <button
            class="chakra-menu__menuitem css-1oz22gy"
            data-index="0"
            id="menu-list-:r1k:-menuitem-:r1l:"
            role="menuitem"
            tabindex="-1"
            type="button"
          >
            <p
              class="chakra-text css-1198d6z"
            >
              January
            </p>
          </button>
          <button
            class="chakra-menu__menuitem css-1oz22gy"
            data-index="1"
            id="menu-list-:r1k:-menuitem-:r1m:"
            role="menuitem"
            tabindex="-1"
            type="button"
          >
            <p
              class="chakra-text css-1198d6z"
            >
              February
            </p>
          </button>
          <button
            class="chakra-menu__menuitem css-1oz22gy"
            data-index="2"
            id="menu-list-:r1k:-menuitem-:r1n:"
            role="menuitem"
            tabindex="-1"
            type="button"
          >
            <p
              class="chakra-text css-1198d6z"
            >
              March
            </p>
          </button>
          <button
            class="chakra-menu__menuitem css-1oz22gy"
            data-index="3"
            id="menu-list-:r1k:-menuitem-:r1o:"
            role="menuitem"
            tabindex="-1"
            type="button"
          >
            <p
              class="chakra-text css-1198d6z"
            >
              April
            </p>
          </button>
          <button
            class="chakra-menu__menuitem css-1oz22gy"
            data-index="4"
            id="menu-list-:r1k:-menuitem-:r1p:"
            role="menuitem"
            tabindex="-1"
            type="button"
          >
            <p
              class="chakra-text css-1198d6z"
            >
              May
            </p>
          </button>
          <button
            class="chakra-menu__menuitem css-1oz22gy"
            data-index="5"
            id="menu-list-:r1k:-menuitem-:r1q:"
            role="menuitem"
            tabindex="-1"
            type="button"
          >
            <p
              class="chakra-text css-1198d6z"
            >
              June
            </p>
          </button>
          <button
            class="chakra-menu__menuitem css-1oz22gy"
            data-index="6"
            id="menu-list-:r1k:-menuitem-:r1r:"
            role="menuitem"
            tabindex="-1"
            type="button"
          >
            <p
              class="chakra-text css-1198d6z"
            >
              July
            </p>
          </button>
          <button
            class="chakra-menu__menuitem css-1oz22gy"
            data-index="7"
            id="menu-list-:r1k:-menuitem-:r1s:"
            role="menuitem"
            tabindex="-1"
            type="button"
          >
            <p
              class="chakra-text css-1198d6z"
            >
              August
            </p>
          </button>
          <button
            class="chakra-menu__menuitem css-1oz22gy"
            data-index="8"
            id="menu-list-:r1k:-menuitem-:r1t:"
            role="menuitem"
            tabindex="-1"
            type="button"
          >
            <p
              class="chakra-text css-1198d6z"
            >
              September
            </p>
          </button>
          <button
            class="chakra-menu__menuitem css-1oz22gy"
            data-index="9"
            id="menu-list-:r1k:-menuitem-:r1u:"
            role="menuitem"
            tabindex="-1"
            type="button"
          >
            <p
              class="chakra-text css-1198d6z"
            >
              October
            </p>
          </button>
          <button
            class="chakra-menu__menuitem css-1oz22gy"
            data-index="10"
            id="menu-list-:r1k:-menuitem-:r1v:"
            role="menuitem"
            tabindex="-1"
            type="button"
          >
            <p
              class="chakra-text css-1198d6z"
            >
              November
            </p>
          </button>
          <button
            class="chakra-menu__menuitem css-1oz22gy"
            data-index="11"
            id="menu-list-:r1k:-menuitem-:r20:"
            role="menuitem"
            tabindex="-1"
            type="button"
          >
            <p
              class="chakra-text css-1198d6z"
            >
              December
            </p>
          </button>
        </div>
      </div>
    </div>
  </form>
  <div
    class="css-odz94x"
  >
    <div
      class="chakra-table__container css-zipzvv"
    >
      <table
        class="chakra-table css-0"
      >
        <thead
          class="css-0"
        >
          <tr
            class="css-0"
          >
            <th
              class="css-1os40k8"
            >
              <div
                class="css-j2at52"
              >
                <p
                  class="chakra-text css-18oyu9h"
                  title="Customer name"
                >
                  Customer name
                </p>
                <button
                  aria-label="This is the icon for Customer name"
                  class="chakra-button css-1x5hsk6"
                  type="button"
                >
                  <svg
                    fill="none"
                    height="12"
                    viewBox="0 0 14 12"
                    width="14"
                  >
                    <path
                      clip-rule="evenodd"
                      d="M10.7749 0.558058C10.5309 0.313981 10.1351 0.313981 9.89107 0.558058L7.39107 3.05806C7.14699 3.30214 7.14699 3.69786 7.39107 3.94194C7.63514 4.18602 8.03087 4.18602 8.27495 3.94194L9.70801 2.50888V11C9.70801 11.3452 9.98783 11.625 10.333 11.625C10.6782 11.625 10.958 11.3452 10.958 11V2.50888L12.3911 3.94194C12.6351 4.18602 13.0309 4.18602 13.2749 3.94194C13.519 3.69786 13.519 3.30214 13.2749 3.05806L10.7749 0.558058Z"
                      fill="#969BA0"
                      fill-rule="evenodd"
                    />
                    <path
                      clip-rule="evenodd"
                      d="M3.22407 11.4419C3.46815 11.686 3.86388 11.686 4.10796 11.4419L6.60796 8.94194C6.85203 8.69786 6.85203 8.30214 6.60796 8.05806C6.36388 7.81398 5.96815 7.81398 5.72407 8.05806L4.29102 9.49112L4.29101 1C4.29101 0.654823 4.01119 0.375001 3.66602 0.375001C3.32084 0.375001 3.04102 0.654823 3.04102 1L3.04102 9.49112L1.60796 8.05806C1.36388 7.81398 0.968151 7.81398 0.724074 8.05806C0.479996 8.30214 0.479996 8.69786 0.724074 8.94194L3.22407 11.4419Z"
                      fill="#969BA0"
                      fill-rule="evenodd"
                      opacity="1"
                    />
                  </svg>
                </button>
              </div>
            </th>
            <th
              class="css-1os40k8"
            >
              <div
                class="css-j2at52"
              >
                <p
                  class="chakra-text css-18oyu9h"
                  title="Date"
                >
                  Date
                </p>
                <button
                  aria-label="This is the icon for Date"
                  class="chakra-button css-1x5hsk6"
                  type="button"
                >
                  <svg
                    fill="none"
                    height="12"
                    viewBox="0 0 14 12"
                    width="14"
                  >
                    <path
                      clip-rule="evenodd"
                      d="M10.7749 0.558058C10.5309 0.313981 10.1351 0.313981 9.89107 0.558058L7.39107 3.05806C7.14699 3.30214 7.14699 3.69786 7.39107 3.94194C7.63514 4.18602 8.03087 4.18602 8.27495 3.94194L9.70801 2.50888V11C9.70801 11.3452 9.98783 11.625 10.333 11.625C10.6782 11.625 10.958 11.3452 10.958 11V2.50888L12.3911 3.94194C12.6351 4.18602 13.0309 4.18602 13.2749 3.94194C13.519 3.69786 13.519 3.30214 13.2749 3.05806L10.7749 0.558058Z"
                      fill="#969BA0"
                      fill-rule="evenodd"
                    />
                    <path
                      clip-rule="evenodd"
                      d="M3.22407 11.4419C3.46815 11.686 3.86388 11.686 4.10796 11.4419L6.60796 8.94194C6.85203 8.69786 6.85203 8.30214 6.60796 8.05806C6.36388 7.81398 5.96815 7.81398 5.72407 8.05806L4.29102 9.49112L4.29101 1C4.29101 0.654823 4.01119 0.375001 3.66602 0.375001C3.32084 0.375001 3.04102 0.654823 3.04102 1L3.04102 9.49112L1.60796 8.05806C1.36388 7.81398 0.968151 7.81398 0.724074 8.05806C0.479996 8.30214 0.479996 8.69786 0.724074 8.94194L3.22407 11.4419Z"
                      fill="#969BA0"
                      fill-rule="evenodd"
                      opacity="1"
                    />
                  </svg>
                </button>
              </div>
            </th>
            <th
              class="css-1os40k8"
            >
              <div
                class="css-j2at52"
              >
                <p
                  class="chakra-text css-18oyu9h"
                  title="Amount"
                >
                  Amount
                </p>
                <button
                  aria-label="This is the icon for Amount"
                  class="chakra-button css-1x5hsk6"
                  type="button"
                >
                  <svg
                    fill="none"
                    height="12"
                    viewBox="0 0 14 12"
                    width="14"
                  >
                    <path
                      clip-rule="evenodd"
                      d="M10.7749 0.558058C10.5309 0.313981 10.1351 0.313981 9.89107 0.558058L7.39107 3.05806C7.14699 3.30214 7.14699 3.69786 7.39107 3.94194C7.63514 4.18602 8.03087 4.18602 8.27495 3.94194L9.70801 2.50888V11C9.70801 11.3452 9.98783 11.625 10.333 11.625C10.6782 11.625 10.958 11.3452 10.958 11V2.50888L12.3911 3.94194C12.6351 4.18602 13.0309 4.18602 13.2749 3.94194C13.519 3.69786 13.519 3.30214 13.2749 3.05806L10.7749 0.558058Z"
                      fill="#969BA0"
                      fill-rule="evenodd"
                    />
                    <path
                      clip-rule="evenodd"
                      d="M3.22407 11.4419C3.46815 11.686 3.86388 11.686 4.10796 11.4419L6.60796 8.94194C6.85203 8.69786 6.85203 8.30214 6.60796 8.05806C6.36388 7.81398 5.96815 7.81398 5.72407 8.05806L4.29102 9.49112L4.29101 1C4.29101 0.654823 4.01119 0.375001 3.66602 0.375001C3.32084 0.375001 3.04102 0.654823 3.04102 1L3.04102 9.49112L1.60796 8.05806C1.36388 7.81398 0.968151 7.81398 0.724074 8.05806C0.479996 8.30214 0.479996 8.69786 0.724074 8.94194L3.22407 11.4419Z"
                      fill="#969BA0"
                      fill-rule="evenodd"
                      opacity="1"
                    />
                  </svg>
                </button>
              </div>
            </th>
            <th
              class="css-1os40k8"
            >
              <div
                class="css-j2at52"
              >
                <p
                  class="chakra-text css-18oyu9h"
                  title="Payment"
                >
                  Payment
                </p>
                <button
                  aria-label="This is the icon for Payment"
                  class="chakra-button css-1x5hsk6"
                  type="button"
                >
                  <svg
                    fill="none"
                    height="12"
                    viewBox="0 0 14 12"
                    width="14"
                  >
                    <path
                      clip-rule="evenodd"
                      d="M10.7749 0.558058C10.5309 0.313981 10.1351 0.313981 9.89107 0.558058L7.39107 3.05806C7.14699 3.30214 7.14699 3.69786 7.39107 3.94194C7.63514 4.18602 8.03087 4.18602 8.27495 3.94194L9.70801 2.50888V11C9.70801 11.3452 9.98783 11.625 10.333 11.625C10.6782 11.625 10.958 11.3452 10.958 11V2.50888L12.3911 3.94194C12.6351 4.18602 13.0309 4.18602 13.2749 3.94194C13.519 3.69786 13.519 3.30214 13.2749 3.05806L10.7749 0.558058Z"
                      fill="#969BA0"
                      fill-rule="evenodd"
                    />
                    <path
                      clip-rule="evenodd"
                      d="M3.22407 11.4419C3.46815 11.686 3.86388 11.686 4.10796 11.4419L6.60796 8.94194C6.85203 8.69786 6.85203 8.30214 6.60796 8.05806C6.36388 7.81398 5.96815 7.81398 5.72407 8.05806L4.29102 9.49112L4.29101 1C4.29101 0.654823 4.01119 0.375001 3.66602 0.375001C3.32084 0.375001 3.04102 0.654823 3.04102 1L3.04102 9.49112L1.60796 8.05806C1.36388 7.81398 0.968151 7.81398 0.724074 8.05806C0.479996 8.30214 0.479996 8.69786 0.724074 8.94194L3.22407 11.4419Z"
                      fill="#969BA0"
                      fill-rule="evenodd"
                      opacity="1"
                    />
                  </svg>
                </button>
              </div>
            </th>
            <th
              class="css-1os40k8"
            >
              <div
                class="css-j2at52"
              >
                <p
                  class="chakra-text css-18oyu9h"
                  title="Status"
                >
                  Status
                </p>
                <button
                  aria-label="This is the icon for Status"
                  class="chakra-button css-1x5hsk6"
                  type="button"
                >
                  <svg
                    fill="none"
                    height="12"
                    viewBox="0 0 14 12"
                    width="14"
                  >
                    <path
                      clip-rule="evenodd"
                      d="M10.7749 0.558058C10.5309 0.313981 10.1351 0.313981 9.89107 0.558058L7.39107 3.05806C7.14699 3.30214 7.14699 3.69786 7.39107 3.94194C7.63514 4.18602 8.03087 4.18602 8.27495 3.94194L9.70801 2.50888V11C9.70801 11.3452 9.98783 11.625 10.333 11.625C10.6782 11.625 10.958 11.3452 10.958 11V2.50888L12.3911 3.94194C12.6351 4.18602 13.0309 4.18602 13.2749 3.94194C13.519 3.69786 13.519 3.30214 13.2749 3.05806L10.7749 0.558058Z"
                      fill="#969BA0"
                      fill-rule="evenodd"
                    />
                    <path
                      clip-rule="evenodd"
                      d="M3.22407 11.4419C3.46815 11.686 3.86388 11.686 4.10796 11.4419L6.60796 8.94194C6.85203 8.69786 6.85203 8.30214 6.60796 8.05806C6.36388 7.81398 5.96815 7.81398 5.72407 8.05806L4.29102 9.49112L4.29101 1C4.29101 0.654823 4.01119 0.375001 3.66602 0.375001C3.32084 0.375001 3.04102 0.654823 3.04102 1L3.04102 9.49112L1.60796 8.05806C1.36388 7.81398 0.968151 7.81398 0.724074 8.05806C0.479996 8.30214 0.479996 8.69786 0.724074 8.94194L3.22407 11.4419Z"
                      fill="#969BA0"
                      fill-rule="evenodd"
                      opacity="1"
                    />
                  </svg>
                </button>
              </div>
            </th>
            <th
              class="css-uvf2im"
            >
              <p
                class="chakra-text css-9m1sly"
                title=""
              />
            </th>
          </tr>
        </thead>
        <tbody
          class="css-0"
        >
          <tr
            class="css-0"
          >
            <td
              class="css-b6tu5s"
              colspan="6"
            >
              No data found
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</div>
`;

exports[`Transaction table Search transactions 1`] = `
<div>
  <form
    class="chakra-stack css-1cfckle"
    data-testid="search-bar"
  >
    <div
      class="css-9d69w6"
    >
      <div
        class="chakra-form-control css-0"
        role="group"
      >
        <div
          class="chakra-input__group css-169ufh8"
          data-group="true"
        >
          <div
            class="chakra-input__left-element css-1u2k0bl"
          >
            <svg
              fill="none"
              height="20"
              stroke="#1D1E24"
              viewBox="0 0 20 20"
              width="20"
              xmlns="http://www.w3.org/2000/svg"
            >
              <circle
                cx="9.78639"
                cy="9.78602"
                r="8.23951"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="1.5"
              />
              <path
                d="M15.5176 15.9447L18.7479 19.1667"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="1.5"
              />
            </svg>
          </div>
          <input
            class="chakra-input css-6hxpcw"
            data-testid="search-transaction"
            id="field-:r21:"
            placeholder="Search by name, email, or other..."
            type="text"
            value="duong"
          />
          <button
            class="chakra-input__right-element css-1uzzgp1"
            type="button"
          >
            <svg
              class="chakra-icon css-onkibi"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M.439,21.44a1.5,1.5,0,0,0,2.122,2.121L11.823,14.3a.25.25,0,0,1,.354,0l9.262,9.263a1.5,1.5,0,1,0,2.122-2.121L14.3,12.177a.25.25,0,0,1,0-.354l9.263-9.262A1.5,1.5,0,0,0,21.439.44L12.177,9.7a.25.25,0,0,1-.354,0L2.561.44A1.5,1.5,0,0,0,.439,2.561L9.7,11.823a.25.25,0,0,1,0,.354Z"
                fill="currentColor"
              />
            </svg>
          </button>
        </div>
      </div>
    </div>
    <div
      class="css-cgqc68"
    >
      <button
        aria-controls="menu-list-:r23:"
        aria-expanded="false"
        aria-haspopup="menu"
        class="chakra-button chakra-menu__menu-button css-lyu4i6"
        id="menu-button-:r23:"
        type="button"
      >
        <span
          class="css-xl71ch"
        >
          <span
            class="css-14zmob5"
          >
            <svg
              fill="none"
              height="17"
              stroke="#1D1E24"
              width="18"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M7.552 13.502H1.25M10.362 3.81h6.301"
              />
              <path
                clip-rule="evenodd"
                d="M5.948 3.756a2.355 2.355 0 0 0-2.363-2.347 2.355 2.355 0 0 0-2.363 2.347 2.355 2.355 0 0 0 2.363 2.346 2.355 2.355 0 0 0 2.363-2.346ZM17.221 13.463a2.354 2.354 0 0 0-2.362-2.346 2.355 2.355 0 0 0-2.364 2.346 2.355 2.355 0 0 0 2.364 2.347 2.354 2.354 0 0 0 2.362-2.347Z"
              />
            </svg>
            Filters
          </span>
        </span>
      </button>
      <div
        class="css-0"
        style="visibility: hidden; position: absolute; inset: 0 auto auto 0;"
      >
        <div
          aria-orientation="vertical"
          class="chakra-menu__menu-list css-ta0hp9"
          id="menu-list-:r23:"
          role="menu"
          style="transform-origin: var(--popper-transform-origin); opacity: 0; visibility: hidden; transform: scale(0.8) translateZ(0);"
          tabindex="-1"
        >
          <button
            class="chakra-menu__menuitem css-1oz22gy"
            data-index="0"
            id="menu-list-:r23:-menuitem-:r24:"
            role="menuitem"
            tabindex="-1"
            type="button"
          >
            <p
              class="chakra-text css-1198d6z"
            >
              January
            </p>
          </button>
          <button
            class="chakra-menu__menuitem css-1oz22gy"
            data-index="1"
            id="menu-list-:r23:-menuitem-:r25:"
            role="menuitem"
            tabindex="-1"
            type="button"
          >
            <p
              class="chakra-text css-1198d6z"
            >
              February
            </p>
          </button>
          <button
            class="chakra-menu__menuitem css-1oz22gy"
            data-index="2"
            id="menu-list-:r23:-menuitem-:r26:"
            role="menuitem"
            tabindex="-1"
            type="button"
          >
            <p
              class="chakra-text css-1198d6z"
            >
              March
            </p>
          </button>
          <button
            class="chakra-menu__menuitem css-1oz22gy"
            data-index="3"
            id="menu-list-:r23:-menuitem-:r27:"
            role="menuitem"
            tabindex="-1"
            type="button"
          >
            <p
              class="chakra-text css-1198d6z"
            >
              April
            </p>
          </button>
          <button
            class="chakra-menu__menuitem css-1oz22gy"
            data-index="4"
            id="menu-list-:r23:-menuitem-:r28:"
            role="menuitem"
            tabindex="-1"
            type="button"
          >
            <p
              class="chakra-text css-1198d6z"
            >
              May
            </p>
          </button>
          <button
            class="chakra-menu__menuitem css-1oz22gy"
            data-index="5"
            id="menu-list-:r23:-menuitem-:r29:"
            role="menuitem"
            tabindex="-1"
            type="button"
          >
            <p
              class="chakra-text css-1198d6z"
            >
              June
            </p>
          </button>
          <button
            class="chakra-menu__menuitem css-1oz22gy"
            data-index="6"
            id="menu-list-:r23:-menuitem-:r2a:"
            role="menuitem"
            tabindex="-1"
            type="button"
          >
            <p
              class="chakra-text css-1198d6z"
            >
              July
            </p>
          </button>
          <button
            class="chakra-menu__menuitem css-1oz22gy"
            data-index="7"
            id="menu-list-:r23:-menuitem-:r2b:"
            role="menuitem"
            tabindex="-1"
            type="button"
          >
            <p
              class="chakra-text css-1198d6z"
            >
              August
            </p>
          </button>
          <button
            class="chakra-menu__menuitem css-1oz22gy"
            data-index="8"
            id="menu-list-:r23:-menuitem-:r2c:"
            role="menuitem"
            tabindex="-1"
            type="button"
          >
            <p
              class="chakra-text css-1198d6z"
            >
              September
            </p>
          </button>
          <button
            class="chakra-menu__menuitem css-1oz22gy"
            data-index="9"
            id="menu-list-:r23:-menuitem-:r2d:"
            role="menuitem"
            tabindex="-1"
            type="button"
          >
            <p
              class="chakra-text css-1198d6z"
            >
              October
            </p>
          </button>
          <button
            class="chakra-menu__menuitem css-1oz22gy"
            data-index="10"
            id="menu-list-:r23:-menuitem-:r2e:"
            role="menuitem"
            tabindex="-1"
            type="button"
          >
            <p
              class="chakra-text css-1198d6z"
            >
              November
            </p>
          </button>
          <button
            class="chakra-menu__menuitem css-1oz22gy"
            data-index="11"
            id="menu-list-:r23:-menuitem-:r2f:"
            role="menuitem"
            tabindex="-1"
            type="button"
          >
            <p
              class="chakra-text css-1198d6z"
            >
              December
            </p>
          </button>
        </div>
      </div>
    </div>
  </form>
  <div
    class="chakra-skeleton css-1dl4gcj"
  />
  <div
    class="chakra-skeleton css-1dl4gcj"
  />
  <div
    class="chakra-skeleton css-1dl4gcj"
  />
  <div
    class="chakra-skeleton css-1dl4gcj"
  />
  <div
    class="chakra-skeleton css-1dl4gcj"
  />
</div>
`;

exports[`Transaction table Search transactions 2`] = `
<div>
  <form
    class="chakra-stack css-1cfckle"
    data-testid="search-bar"
  >
    <div
      class="css-9d69w6"
    >
      <div
        class="chakra-form-control css-0"
        role="group"
      >
        <div
          class="chakra-input__group css-169ufh8"
          data-group="true"
        >
          <div
            class="chakra-input__left-element css-1u2k0bl"
          >
            <svg
              fill="none"
              height="20"
              stroke="#1D1E24"
              viewBox="0 0 20 20"
              width="20"
              xmlns="http://www.w3.org/2000/svg"
            >
              <circle
                cx="9.78639"
                cy="9.78602"
                r="8.23951"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="1.5"
              />
              <path
                d="M15.5176 15.9447L18.7479 19.1667"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="1.5"
              />
            </svg>
          </div>
          <input
            class="chakra-input css-6hxpcw"
            data-testid="search-transaction"
            id="field-:r21:"
            placeholder="Search by name, email, or other..."
            type="text"
            value="duong"
          />
          <button
            class="chakra-input__right-element css-1uzzgp1"
            type="button"
          >
            <svg
              class="chakra-icon css-onkibi"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M.439,21.44a1.5,1.5,0,0,0,2.122,2.121L11.823,14.3a.25.25,0,0,1,.354,0l9.262,9.263a1.5,1.5,0,1,0,2.122-2.121L14.3,12.177a.25.25,0,0,1,0-.354l9.263-9.262A1.5,1.5,0,0,0,21.439.44L12.177,9.7a.25.25,0,0,1-.354,0L2.561.44A1.5,1.5,0,0,0,.439,2.561L9.7,11.823a.25.25,0,0,1,0,.354Z"
                fill="currentColor"
              />
            </svg>
          </button>
        </div>
      </div>
    </div>
    <div
      class="css-cgqc68"
    >
      <button
        aria-controls="menu-list-:r23:"
        aria-expanded="false"
        aria-haspopup="menu"
        class="chakra-button chakra-menu__menu-button css-lyu4i6"
        id="menu-button-:r23:"
        type="button"
      >
        <span
          class="css-xl71ch"
        >
          <span
            class="css-14zmob5"
          >
            <svg
              fill="none"
              height="17"
              stroke="#1D1E24"
              width="18"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M7.552 13.502H1.25M10.362 3.81h6.301"
              />
              <path
                clip-rule="evenodd"
                d="M5.948 3.756a2.355 2.355 0 0 0-2.363-2.347 2.355 2.355 0 0 0-2.363 2.347 2.355 2.355 0 0 0 2.363 2.346 2.355 2.355 0 0 0 2.363-2.346ZM17.221 13.463a2.354 2.354 0 0 0-2.362-2.346 2.355 2.355 0 0 0-2.364 2.346 2.355 2.355 0 0 0 2.364 2.347 2.354 2.354 0 0 0 2.362-2.347Z"
              />
            </svg>
            Filters
          </span>
        </span>
      </button>
      <div
        class="css-0"
        style="visibility: hidden; position: absolute; inset: 0 auto auto 0;"
      >
        <div
          aria-orientation="vertical"
          class="chakra-menu__menu-list css-ta0hp9"
          id="menu-list-:r23:"
          role="menu"
          style="transform-origin: var(--popper-transform-origin); opacity: 0; visibility: hidden; transform: scale(0.8) translateZ(0);"
          tabindex="-1"
        >
          <button
            class="chakra-menu__menuitem css-1oz22gy"
            data-index="0"
            id="menu-list-:r23:-menuitem-:r24:"
            role="menuitem"
            tabindex="-1"
            type="button"
          >
            <p
              class="chakra-text css-1198d6z"
            >
              January
            </p>
          </button>
          <button
            class="chakra-menu__menuitem css-1oz22gy"
            data-index="1"
            id="menu-list-:r23:-menuitem-:r25:"
            role="menuitem"
            tabindex="-1"
            type="button"
          >
            <p
              class="chakra-text css-1198d6z"
            >
              February
            </p>
          </button>
          <button
            class="chakra-menu__menuitem css-1oz22gy"
            data-index="2"
            id="menu-list-:r23:-menuitem-:r26:"
            role="menuitem"
            tabindex="-1"
            type="button"
          >
            <p
              class="chakra-text css-1198d6z"
            >
              March
            </p>
          </button>
          <button
            class="chakra-menu__menuitem css-1oz22gy"
            data-index="3"
            id="menu-list-:r23:-menuitem-:r27:"
            role="menuitem"
            tabindex="-1"
            type="button"
          >
            <p
              class="chakra-text css-1198d6z"
            >
              April
            </p>
          </button>
          <button
            class="chakra-menu__menuitem css-1oz22gy"
            data-index="4"
            id="menu-list-:r23:-menuitem-:r28:"
            role="menuitem"
            tabindex="-1"
            type="button"
          >
            <p
              class="chakra-text css-1198d6z"
            >
              May
            </p>
          </button>
          <button
            class="chakra-menu__menuitem css-1oz22gy"
            data-index="5"
            id="menu-list-:r23:-menuitem-:r29:"
            role="menuitem"
            tabindex="-1"
            type="button"
          >
            <p
              class="chakra-text css-1198d6z"
            >
              June
            </p>
          </button>
          <button
            class="chakra-menu__menuitem css-1oz22gy"
            data-index="6"
            id="menu-list-:r23:-menuitem-:r2a:"
            role="menuitem"
            tabindex="-1"
            type="button"
          >
            <p
              class="chakra-text css-1198d6z"
            >
              July
            </p>
          </button>
          <button
            class="chakra-menu__menuitem css-1oz22gy"
            data-index="7"
            id="menu-list-:r23:-menuitem-:r2b:"
            role="menuitem"
            tabindex="-1"
            type="button"
          >
            <p
              class="chakra-text css-1198d6z"
            >
              August
            </p>
          </button>
          <button
            class="chakra-menu__menuitem css-1oz22gy"
            data-index="8"
            id="menu-list-:r23:-menuitem-:r2c:"
            role="menuitem"
            tabindex="-1"
            type="button"
          >
            <p
              class="chakra-text css-1198d6z"
            >
              September
            </p>
          </button>
          <button
            class="chakra-menu__menuitem css-1oz22gy"
            data-index="9"
            id="menu-list-:r23:-menuitem-:r2d:"
            role="menuitem"
            tabindex="-1"
            type="button"
          >
            <p
              class="chakra-text css-1198d6z"
            >
              October
            </p>
          </button>
          <button
            class="chakra-menu__menuitem css-1oz22gy"
            data-index="10"
            id="menu-list-:r23:-menuitem-:r2e:"
            role="menuitem"
            tabindex="-1"
            type="button"
          >
            <p
              class="chakra-text css-1198d6z"
            >
              November
            </p>
          </button>
          <button
            class="chakra-menu__menuitem css-1oz22gy"
            data-index="11"
            id="menu-list-:r23:-menuitem-:r2f:"
            role="menuitem"
            tabindex="-1"
            type="button"
          >
            <p
              class="chakra-text css-1198d6z"
            >
              December
            </p>
          </button>
        </div>
      </div>
    </div>
  </form>
  <div
    class="css-odz94x"
  >
    <div
      class="chakra-table__container css-zipzvv"
    >
      <table
        class="chakra-table css-0"
      >
        <thead
          class="css-0"
        >
          <tr
            class="css-0"
          >
            <th
              class="css-1os40k8"
            >
              <div
                class="css-j2at52"
              >
                <p
                  class="chakra-text css-18oyu9h"
                  title="Customer name"
                >
                  Customer name
                </p>
                <button
                  aria-label="This is the icon for Customer name"
                  class="chakra-button css-1x5hsk6"
                  type="button"
                >
                  <svg
                    fill="none"
                    height="12"
                    viewBox="0 0 14 12"
                    width="14"
                  >
                    <path
                      clip-rule="evenodd"
                      d="M10.7749 0.558058C10.5309 0.313981 10.1351 0.313981 9.89107 0.558058L7.39107 3.05806C7.14699 3.30214 7.14699 3.69786 7.39107 3.94194C7.63514 4.18602 8.03087 4.18602 8.27495 3.94194L9.70801 2.50888V11C9.70801 11.3452 9.98783 11.625 10.333 11.625C10.6782 11.625 10.958 11.3452 10.958 11V2.50888L12.3911 3.94194C12.6351 4.18602 13.0309 4.18602 13.2749 3.94194C13.519 3.69786 13.519 3.30214 13.2749 3.05806L10.7749 0.558058Z"
                      fill="#969BA0"
                      fill-rule="evenodd"
                    />
                    <path
                      clip-rule="evenodd"
                      d="M3.22407 11.4419C3.46815 11.686 3.86388 11.686 4.10796 11.4419L6.60796 8.94194C6.85203 8.69786 6.85203 8.30214 6.60796 8.05806C6.36388 7.81398 5.96815 7.81398 5.72407 8.05806L4.29102 9.49112L4.29101 1C4.29101 0.654823 4.01119 0.375001 3.66602 0.375001C3.32084 0.375001 3.04102 0.654823 3.04102 1L3.04102 9.49112L1.60796 8.05806C1.36388 7.81398 0.968151 7.81398 0.724074 8.05806C0.479996 8.30214 0.479996 8.69786 0.724074 8.94194L3.22407 11.4419Z"
                      fill="#969BA0"
                      fill-rule="evenodd"
                      opacity="1"
                    />
                  </svg>
                </button>
              </div>
            </th>
            <th
              class="css-1os40k8"
            >
              <div
                class="css-j2at52"
              >
                <p
                  class="chakra-text css-18oyu9h"
                  title="Email"
                >
                  Email
                </p>
                <button
                  aria-label="This is the icon for Email"
                  class="chakra-button css-1x5hsk6"
                  type="button"
                >
                  <svg
                    fill="none"
                    height="12"
                    viewBox="0 0 14 12"
                    width="14"
                  >
                    <path
                      clip-rule="evenodd"
                      d="M10.7749 0.558058C10.5309 0.313981 10.1351 0.313981 9.89107 0.558058L7.39107 3.05806C7.14699 3.30214 7.14699 3.69786 7.39107 3.94194C7.63514 4.18602 8.03087 4.18602 8.27495 3.94194L9.70801 2.50888V11C9.70801 11.3452 9.98783 11.625 10.333 11.625C10.6782 11.625 10.958 11.3452 10.958 11V2.50888L12.3911 3.94194C12.6351 4.18602 13.0309 4.18602 13.2749 3.94194C13.519 3.69786 13.519 3.30214 13.2749 3.05806L10.7749 0.558058Z"
                      fill="#969BA0"
                      fill-rule="evenodd"
                    />
                    <path
                      clip-rule="evenodd"
                      d="M3.22407 11.4419C3.46815 11.686 3.86388 11.686 4.10796 11.4419L6.60796 8.94194C6.85203 8.69786 6.85203 8.30214 6.60796 8.05806C6.36388 7.81398 5.96815 7.81398 5.72407 8.05806L4.29102 9.49112L4.29101 1C4.29101 0.654823 4.01119 0.375001 3.66602 0.375001C3.32084 0.375001 3.04102 0.654823 3.04102 1L3.04102 9.49112L1.60796 8.05806C1.36388 7.81398 0.968151 7.81398 0.724074 8.05806C0.479996 8.30214 0.479996 8.69786 0.724074 8.94194L3.22407 11.4419Z"
                      fill="#969BA0"
                      fill-rule="evenodd"
                      opacity="1"
                    />
                  </svg>
                </button>
              </div>
            </th>
            <th
              class="css-1os40k8"
            >
              <div
                class="css-j2at52"
              >
                <p
                  class="chakra-text css-18oyu9h"
                  title="Location"
                >
                  Location
                </p>
                <button
                  aria-label="This is the icon for Location"
                  class="chakra-button css-1x5hsk6"
                  type="button"
                >
                  <svg
                    fill="none"
                    height="12"
                    viewBox="0 0 14 12"
                    width="14"
                  >
                    <path
                      clip-rule="evenodd"
                      d="M10.7749 0.558058C10.5309 0.313981 10.1351 0.313981 9.89107 0.558058L7.39107 3.05806C7.14699 3.30214 7.14699 3.69786 7.39107 3.94194C7.63514 4.18602 8.03087 4.18602 8.27495 3.94194L9.70801 2.50888V11C9.70801 11.3452 9.98783 11.625 10.333 11.625C10.6782 11.625 10.958 11.3452 10.958 11V2.50888L12.3911 3.94194C12.6351 4.18602 13.0309 4.18602 13.2749 3.94194C13.519 3.69786 13.519 3.30214 13.2749 3.05806L10.7749 0.558058Z"
                      fill="#969BA0"
                      fill-rule="evenodd"
                    />
                    <path
                      clip-rule="evenodd"
                      d="M3.22407 11.4419C3.46815 11.686 3.86388 11.686 4.10796 11.4419L6.60796 8.94194C6.85203 8.69786 6.85203 8.30214 6.60796 8.05806C6.36388 7.81398 5.96815 7.81398 5.72407 8.05806L4.29102 9.49112L4.29101 1C4.29101 0.654823 4.01119 0.375001 3.66602 0.375001C3.32084 0.375001 3.04102 0.654823 3.04102 1L3.04102 9.49112L1.60796 8.05806C1.36388 7.81398 0.968151 7.81398 0.724074 8.05806C0.479996 8.30214 0.479996 8.69786 0.724074 8.94194L3.22407 11.4419Z"
                      fill="#969BA0"
                      fill-rule="evenodd"
                      opacity="1"
                    />
                  </svg>
                </button>
              </div>
            </th>
            <th
              class="css-1os40k8"
            >
              <div
                class="css-j2at52"
              >
                <p
                  class="chakra-text css-18oyu9h"
                  title="Spent"
                >
                  Spent
                </p>
                <button
                  aria-label="This is the icon for Spent"
                  class="chakra-button css-1x5hsk6"
                  type="button"
                >
                  <svg
                    fill="none"
                    height="12"
                    viewBox="0 0 14 12"
                    width="14"
                  >
                    <path
                      clip-rule="evenodd"
                      d="M10.7749 0.558058C10.5309 0.313981 10.1351 0.313981 9.89107 0.558058L7.39107 3.05806C7.14699 3.30214 7.14699 3.69786 7.39107 3.94194C7.63514 4.18602 8.03087 4.18602 8.27495 3.94194L9.70801 2.50888V11C9.70801 11.3452 9.98783 11.625 10.333 11.625C10.6782 11.625 10.958 11.3452 10.958 11V2.50888L12.3911 3.94194C12.6351 4.18602 13.0309 4.18602 13.2749 3.94194C13.519 3.69786 13.519 3.30214 13.2749 3.05806L10.7749 0.558058Z"
                      fill="#969BA0"
                      fill-rule="evenodd"
                    />
                    <path
                      clip-rule="evenodd"
                      d="M3.22407 11.4419C3.46815 11.686 3.86388 11.686 4.10796 11.4419L6.60796 8.94194C6.85203 8.69786 6.85203 8.30214 6.60796 8.05806C6.36388 7.81398 5.96815 7.81398 5.72407 8.05806L4.29102 9.49112L4.29101 1C4.29101 0.654823 4.01119 0.375001 3.66602 0.375001C3.32084 0.375001 3.04102 0.654823 3.04102 1L3.04102 9.49112L1.60796 8.05806C1.36388 7.81398 0.968151 7.81398 0.724074 8.05806C0.479996 8.30214 0.479996 8.69786 0.724074 8.94194L3.22407 11.4419Z"
                      fill="#969BA0"
                      fill-rule="evenodd"
                      opacity="1"
                    />
                  </svg>
                </button>
              </div>
            </th>
            <th
              class="css-bsiblf"
            />
          </tr>
        </thead>
        <tbody
          class="css-0"
        >
          <tr
            class="css-0"
          >
            <td
              class="css-b6tu5s"
              colspan="5"
            >
              No data found
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</div>
`;
